--- a/styles/style.css
+++ b/styles/style.css
@@ -9,11 +9,6 @@ body {
   font-family: "Epilogue", sans-serif;
 }
 
-/* body .light-theme {
-  background-color: aliceblue;
-  color: black;
-} */
-
 body .dark-theme {
   background-color: black;
   color: antiquewhite;
@@ -47,6 +42,7 @@ body .main {
   padding: 2rem;
   min-height: 7rem;
   width: 100%;
+  height: 100%;
   background-color: rgba(182, 224, 250, 0.479);
   border-radius: 10px;
   font-size: 1.5rem;
@@ -64,5 +60,33 @@ body .main {
 
 /* todo: remove later */
 .renew-btn-container {
-  font-size: 2rem;
+  font-size: 3rem;
+}
+
+.animation-out {
+  animation: 1s out;
+}
+
+@keyframes out {
+  from {
+    opacity: 100%;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
+
+.animation-in {
+  animation: 1s in;
+}
+
+@keyframes in {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 100%;
+  }
 }
