--- a/styles/style.css
+++ b/styles/style.css
@@ -2,11 +2,29 @@ html,
 body {
   height: 100%;
   width: 100%;
+  font-family: "Source Sans Pro", sans-serif;
+}
+
+/* layout is flexbox */
+body,
+.main,
+.card {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: "Epilogue", sans-serif;
+}
+
+/* auto light & dark themes  */
+@media (prefers-color-scheme: light) {
+  body {
+    background-color: rgb(245, 245, 245);
+    color: rgb(24, 24, 24);
+  }
+
+  a {
+    color: rgb(24, 24, 24);
+  }
 }
 
 @media (prefers-color-scheme: dark) {
@@ -14,44 +32,50 @@ body {
     background-color: rgb(24, 24, 24);
     color: rgb(245, 245, 245);
   }
+
+  a {
+    color: rgb(245, 245, 245);
+  }
 }
 
-body a {
+/* the only link is 'reload' icon */
+a {
   text-decoration: none;
 }
 
+a :hover {
+  color: gray;
+}
+
+/* 'main' contains hero icon, card, and reload icon */
 .main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   min-height: 30%;
   width: 60%;
   min-width: 60%;
 }
 
+/* on small screens, main container is more narrow */
 @media (max-width: 600px) {
   .main {
     width: 85%;
   }
 }
 
+/* card with text */
 .card {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   margin: 1rem;
   padding: 1rem 2rem;
   height: 100%;
   background-color: rgba(182, 224, 250, 0.479);
   border-radius: 10px;
-  font-size: 1.1rem;
-  text-align: center;
+  font-size: 1.2rem;
 }
 
+/* on big screens, card is wider and text is center-aligned */
 @media (min-width: 600px) {
   .card {
     width: 100%;
+    text-align: center;
   }
 }
 
@@ -59,11 +83,11 @@ body a {
   font-size: 2rem;
 }
 
-/* todo: remove later */
 .renew-btn-container {
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
+/* animations on card change */
 .animation-out {
   animation: 0.5s out;
 }
